--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "dateformat": "^3.0.3",
+    "dayjs": "^1.9.5",
+    "fitness-js": "^0.2.2",
     "next": "^10.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.30.0"
   }
 }
