--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "fitness-js": "^0.2.2",
     "next": "^10.0.0",
     "react": "16.13.1",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "16.13.1",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "use-long-press": "^1.0.4"
   },
   "devDependencies": {
     "@prisma/cli": "^2.13.1"
