--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^2.13.1",
     "dateformat": "^3.0.3",
     "dayjs": "^1.9.5",
     "fitness-js": "^0.2.2",
@@ -19,7 +18,5 @@
     "sass": "^1.30.0",
     "use-long-press": "^1.0.4"
   },
-  "devDependencies": {
-    "@prisma/cli": "^2.13.1"
-  }
+  "devDependencies": {}
 }
