--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "better-sqlite3": "^7.1.2",
     "dateformat": "^3.0.3",
     "dayjs": "^1.9.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fitness-js": "^0.2.2",
     "next": "^10.0.0",
     "react": "16.13.1",
