--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#e63946",
   "icons": [
     {
-      "src": "icons/android-192x192.png",
+      "src": "android-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icons/android-512x512.png",
+      "src": "android-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
