--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:../running.db"
+VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
