--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fitness-js": "^0.2.2",
+    "form-data": "^4.0.0",
     "next": "^10.0.0",
     "next-pwa": "^5.0.1",
     "react": "16.13.1",
