--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="file:../running.db"
 VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
+
+NEXT_PUBLIC_DATE_FORMAT=DD.MM.YYYY HH:mm:ss
+
+NEXT_PUBLIC_GOOGLE_CLIENT_ID = 26098708289-29onqii9kjr6deeffd2ktup4pt771j5u.apps.googleusercontent.com
+NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read
+GOOGLE_API_ACTIVITY_TYPE_RUNNING=56
