edit and new run

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL="file:../running.db"
 VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
 
-NEXT_PUBLIC_DATE_FORMAT=DD.MM.YYYY HH:mm:ss
+NEXT_PUBLIC_DATE_FORMAT=YYYY-MM-DD HH:mm:ss
 
 NEXT_PUBLIC_GOOGLE_CLIENT_ID = 26098708289-29onqii9kjr6deeffd2ktup4pt771j5u.apps.googleusercontent.com
 NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read
