--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_API_GET_RUNS=http://localhost:3000/api/all
-NEXT_PUBLIC_API_GET_BETWEEN=http://localhost:3000/api/between
 NEXT_PUBLIC_API_UPDATE_RUN=http://localhost:3000/api/update
 NEXT_PUBLIC_API_INSERT_RUN=http://localhost:3000/api/insert
 NEXT_PUBLIC_API_DELETE_RUN=http://localhost:3000/api/delete
 NEXT_PUBLIC_API_VDOT=http://localhost:3000/api/vdot
-NEXT_PUBLIC_API_FETCH_GOOGLE_FIT_DATA=http://localhost:3000/api/fit
+NEXT_PUBLIC_API_FETCH_GOOGLE_FIT_DATA=http://localhost:3000/api/gfit/fetch
+NEXT_PUBLIC_API_CHECK_GOOGLE_FIT_DATA=http://localhost:3000/api/gfit/check
 
 DATABASE_URL="file:../running.db"
 VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
