--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
 NEXT_PUBLIC_DATE_FORMAT=YYYY-MM-DD HH:mm:ss
 
 NEXT_PUBLIC_GOOGLE_CLIENT_ID = 26098708289-29onqii9kjr6deeffd2ktup4pt771j5u.apps.googleusercontent.com
-NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read
+NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read https://www.googleapis.com/auth/fitness.location.read
 GOOGLE_API_ACTIVITY_TYPE_RUNNING=56
