--- a/.env
+++ b/.env
@@ -1,16 +1,5 @@
-NEXT_PUBLIC_API_GET_RUNS=http://localhost:3000/api/all
-NEXT_PUBLIC_API_UPDATE_RUN=http://localhost:3000/api/update
-NEXT_PUBLIC_API_INSERT_RUN=http://localhost:3000/api/insert
-NEXT_PUBLIC_API_DELETE_RUN=http://localhost:3000/api/delete
-NEXT_PUBLIC_API_VDOT=http://localhost:3000/api/vdot
-NEXT_PUBLIC_API_FETCH_GOOGLE_FIT_DATA=http://localhost:3000/api/gfit/fetch
-NEXT_PUBLIC_API_CHECK_GOOGLE_FIT_DATA=http://localhost:3000/api/gfit/check
-
-DATABASE_URL="file:../running.db"
-VDOT_API=https://runsmartproject.com/vdot/app/api/find_paces
-
+NEXT_PUBLIC_API_FETCH_GOOGLE_FIT_DATA=http://localhost:3000/api/fetch
 NEXT_PUBLIC_DATE_FORMAT=YYYY-MM-DD HH:mm:ss
-
 NEXT_PUBLIC_GOOGLE_CLIENT_ID = 26098708289-29onqii9kjr6deeffd2ktup4pt771j5u.apps.googleusercontent.com
 NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read https://www.googleapis.com/auth/fitness.location.read
 GOOGLE_API_ACTIVITY_TYPE_RUNNING=56
