--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "fitness-js": "^0.2.2",
     "form-data": "^4.0.0",
+    "google-auth-library": "^8.0.2",
     "next": "^10.0.0",
     "next-pwa": "^5.0.1",
     "react": "16.13.1",
