--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datetime-picker": "*",
     "react-dom": "*",
     "react-google-login": "*",
+    "react-icons": "^4.3.1",
     "sass": "*"
   },
   "devDependencies": {
