--- a/.env
+++ b/.env
@@ -9,4 +9,8 @@ NEXT_PUBLIC_DATE_FORMAT=YYYY-MM-DD HH:mm:ss
 
 NEXT_PUBLIC_GOOGLE_CLIENT_ID = 26098708289-29onqii9kjr6deeffd2ktup4pt771j5u.apps.googleusercontent.com
 NEXT_PUBLIC_GOOGLE_SCOPE = https://www.googleapis.com/auth/fitness.activity.read https://www.googleapis.com/auth/fitness.location.read
-GOOGLE_API_ACTIVITY_TYPE_RUNNING=56
+NEXT_PUBLIC_GOOGLE_API_REQUEST_LIMIT = 280
+NEXT_PUBLIC_GOOGLE_API_REQUEST_LIMIT_TIMEOUT = 60
+GOOGLE_API_ACTIVITY_TYPE_RUNNING=8
+GOOGLE_API_ACTIVITY_TYPE_JOGGING=56
+
