--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "form-data": "*",
     "next": "*",
     "next-pwa": "*",
-    "react": "*",
+    "react": "^18",
+    "react-dom": "^18",
     "react-datetime-picker": "*",
-    "react-dom": "*",
     "react-google-login": "*",
     "react-icons": "^4.3.1",
     "sass": "*"
